firefam-rs/tui/src/chatwidget/snapshots/firefam_tui__chatwidget__tests__app_server_mcp_startup_failure_renders_warning_history.snap
---
source: tui/src/chatwidget/tests/mcp_startup.rs
expression: normalize_snapshot_paths(term.backend().vt100().screen().contents())
---



⚠ MCP client for `alpha` failed to start: handshake failed
⚠ MCP startup incomplete (failed: alpha)
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
  /tmp/project
› Ask Firefam to do anything
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
  ? help · / commands and skills                                                           Read Only · gpt-5.5 default
