firefam-rs/tui/src/chatwidget/snapshots/firefam_tui__chatwidget__tests__approvals_selection_popup.snap
---
source: tui/src/chatwidget/tests/permissions.rs
expression: popup
---
  Update Model Permissions

› 1. Default      Firefam can read and edit files in the current workspace,
                  and run commands. Approval is required to access the
                  internet or edit other files.
  2. Full Access  Firefam can edit files outside this workspace and access the
                  internet without asking for approval. Exercise caution when
                  using.

  ↑/↓ Navigate · enter Select · tab Complete · esc to cancel
