firefam-rs/tui/src/chatwidget/snapshots/firefam_tui__chatwidget__tests__apps_popup_loading_state.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
expression: before
---
  Apps
  Loading installed and available apps...

›    Loading apps...  This updates when the full list is ready.

  ↑/↓ Navigate · enter Select · tab Complete · esc to cancel
