firefam-rs/tui/src/chatwidget/snapshots/firefam_tui__chatwidget__tests__chat_small_idle_h2.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
expression: normalized_backend_snapshot(terminal.backend())
---
"────────────────────────────────────────"
"────────────────────────────────────────"
